# rsri-wishlist

./: .env  Cargo.toml
migrations/2023-12-23-043752_users/: up.sql
migrations/2023-12-23-045638_wishlists/: down.sql  up.sql
migrations/2023-12-23-050444_wish_item/: down.sql  up.sql
migrations/2023-12-24-063100_users/: up.sql
migrations/2023-12-24-063134_wish/: down.sql  up.sql
migrations/2023-12-24-063203_friendship/: down.sql  up.sql
models/: mod.rs
src/: main.rs  schema.rs
src/models/: mod.rs
src/services/: auth.rs  mod.rs
templates/: friendships.html.hbs  users.html.hbs  wish_edit.html.hbs  wishes.html.hbs
