[package]
name = "wishlist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features=["json"]}
diesel = { version = "2.1.5", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
serde = "1.0.152"
rocket_contrib = "0.4.4"
log = "0.4"
env_logger = "0.9"
rdiesel = { git = "https://github.com/flux-rs/rdiesel.git"}



[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["handlebars"]
